--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,15 +47,43 @@ ul{
     display: block;
     padding: 0 30px;
     opacity: 1;
+    position: fixed;
+    left: 270px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: all 0.3s ease;
+}
+
+.section.back-section{
+    z-index: 1;
+}
+
+.section.active{
+    z-index: 2;
+    opacity: 1;
+    animation: slideSection 1s ease;
+}
+
+@keyframes slideSection{
+    0%{
+        transform: translateX(100%);
+    }
+    100%{
+        transform: translateX(0%);
+    }
 }
 
 .hidden{
     display: none !important;
 }
 
-.main-content{
+/* .main-content{
     padding-left: 270px;
-}
+} */
 
 /* CONTAINER STYLE AFTER YOU HAVE RESIZED THE PHOTO */
 .padd-15{
@@ -154,6 +182,8 @@ ul{
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 10;
+    transition: all 0.3s ease;
     /* opacity: 1; */
 }
 
@@ -219,6 +249,7 @@ ul{
     display: none;
     align-items: center;
     justify-content: center;
+    transition: all 0.3s ease;
 }
 
 .aside .nav-toggler span{
@@ -229,6 +260,10 @@ ul{
     position: relative;
 }
 
+/* .aside .nav-toggler.open span{
+    background-color: transparent;
+} */
+
 .aside .nav-toggler span::before{
     content: '';
     height: 2px;
@@ -238,6 +273,16 @@ ul{
     top: -6px;
     left: 0;
 }
+
+/* .aside .nav-toggler.open span::before{
+    transform: rotate(45deg);
+    top: 0;
+}
+
+.aside .nav-toggler.open span::after{
+    transform: rotate(-45deg);
+    top: 0;
+} */
 
 .aside .nav-toggler span::after{
     content: '';
@@ -271,7 +316,7 @@ ul{
 }
 
 /* make the home icon color red */
-.aside .nav li a.acive{
+.aside .nav li a.active{
     color: var(--skin-color);
 }
 
@@ -415,7 +460,7 @@ h3.my-profession{
 }
 
 .about .about-content .personal-info .buttons .btn{
-    margin-right: 15px;
+    /* margin-right: 15px; */
     margin-top: 10px;
 }
 
@@ -771,8 +816,24 @@ h3.my-profession{
     .aside{
         left: -270px;
     }
-    .main-content{
+    /* .main-content{
         padding-left: 0;
+    } */
+    .aside.open{
+        left: 0;
+    }
+    .aside .nav-toggler.open{
+        left: 300px;
+    }
+    .aside .nav-toggler{
+        display: flex;
+        left: 30px;
+    }
+    .section{
+        left: 0;
+    }
+    .section.open{
+        left: 270px;
     }
     .about .about-content .personal-info .info-item p span{
         display: block;
